--- a/app/views/home.html
+++ b/app/views/home.html
@@ -3,6 +3,7 @@
   <head>
     <title>Home</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <link rel="stylesheet" type="text/css" href="/static/css/style.css">
   </head>
   <body>
     <div>Hello world!</div>
