--- a/app/views/home.html
+++ b/app/views/home.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" type="text/css" href="/static/css/style.css">
   </head>
   <body>
-    <div>Hello world!</div>
+    <div>Welcome to the home page!</div>
   </body>
 </html>
