--- a/skeleton/app/views/home.html
+++ b/skeleton/app/views/home.html
@@ -3,7 +3,7 @@
   <head>
     <title>Home</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <link rel="stylesheet" type="text/css" href="/static/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/public/css/style.css">
   </head>
   <body>
     <div>Welcome to the home page!</div>
