--- a/skeleton/app/views/index.html
+++ b/skeleton/app/views/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Home</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <link rel="stylesheet" type="text/css" href="/public/css/style.css">
-  </head>
-  <body>
-    <div>Welcome to the home page!</div>
-  </body>
+    <head>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="/public/css/style.css">
+        <title>Home</title>
+    </head>
+    <body>
+    <p>Welcome to the home page!</p>
+    </body>
 </html>
