--- a/skeleton/app/views/errors/404.html
+++ b/skeleton/app/views/errors/404.html
@@ -3,6 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>Page Not Found</title>
+        <style>
+          body {
+            font-family: sans-serif;
+          }
+        </style>
     </head>
     <body>
     <h1>Not found</h1>
